Fix Redis connection and Next.js compatibility errors

--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,10 @@ ADMINS_TABLE=Admins
 # S3 Configuration
 CV_BUCKET_NAME=jobquest-cvs
 
-# Redis Configuration
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
+# Redis Configuration (optional - will use mock client if not available)
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=
 
 # Kafka Configuration
 KAFKA_BROKER=localhost:9092
