Configure Multiple Servers with Load Balancing and Failover

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,18 @@ PORT=5000
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 
-# AWS Configuration
+# Load Balancer
+LOAD_BALANCER_PORT=8080
+
+# AWS Configuration (Primary)
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+
+# AWS Configuration (Fallback)
+AWS_REGION_FALLBACK=us-west-2
+AWS_ACCESS_KEY_ID_FALLBACK=your_aws_access_key_id_fallback
+AWS_SECRET_ACCESS_KEY_FALLBACK=your_aws_secret_access_key_fallback
 
 # DynamoDB Tables
 JOBS_TABLE=Jobs
@@ -17,10 +25,15 @@ ADMINS_TABLE=Admins
 # S3 Configuration
 CV_BUCKET_NAME=jobquest-cvs
 
-# Redis Configuration (optional - will use mock client if not available)
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_PASSWORD=
+# Redis Configuration (Primary)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Redis Configuration (Fallback)
+REDIS_HOST_FALLBACK=localhost
+REDIS_PORT_FALLBACK=6380
+REDIS_PASSWORD_FALLBACK=
 
 # Kafka Configuration
 KAFKA_BROKER=localhost:9092
@@ -40,4 +53,4 @@ ONESIGNAL_APP_ID=your_onesignal_app_id
 ONESIGNAL_REST_API_KEY=your_onesignal_rest_api_key
 
 # Frontend Environment Variables (for packages/web/.env.local)
-NEXT_PUBLIC_API_URL=http://localhost:5000/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
