--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/index.js",
+    "dev:cluster": "node src/config/cluster.js",
     "start": "node src/index.js",
+    "start:cluster": "node src/config/cluster.js",
+    "start:pm2": "pm2 start ecosystem.config.js",
+    "stop:pm2": "pm2 stop ecosystem.config.js",
+    "restart:pm2": "pm2 restart ecosystem.config.js",
     "build": "echo 'API build complete'"
   },
   "dependencies": {
@@ -25,7 +30,8 @@
     "@aws-sdk/s3-request-presigner": "^3.454.0",
     "axios": "^1.6.2",
     "kafkajs": "^2.2.4",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
