Add New Routes and Pages for JobQuest Platform

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ AWS_SECRET_ACCESS_KEY_FALLBACK=your_aws_secret_access_key_fallback
 # DynamoDB Tables
 JOBS_TABLE=Jobs
 SARKARI_JOBS_TABLE=SarkariJobs
+HACKATHONS_TABLE=Hackathons
+CERTIFICATIONS_TABLE=Certifications
+COURSES_TABLE=Courses
+RESUME_TIPS_TABLE=ResumeTips
 SUBSCRIPTIONS_TABLE=Subscriptions
 ADMINS_TABLE=Admins
 
